# Named-Entity-Recognition

./: README.md
python/: cli.py  pyproject.toml
python/ner/: __init__.py  config.py  train.py
python/ner/data/: ner_tags.py  processing.py  utils.py
python/ner/training/: initializers.py
